# EcoViz

./: .gitignore  README  README-EcoViz.txt  README-Ecoviz-Windows.md  README-FileFormat.md  README-Rendering-Mitsuba.md  README.md  ReadMe MAC.rtf  european.db  europeanold.db  question-issues.txt
EcoSim/sim/: CMakeLists.txt
EcoSynth/: buildecolearn.sh
EcoSynth/viewer/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp  specselect_window.cpp  window.cpp  window.h
cluster_distribs/src/: UndergrowthSampler.cpp
common/: basic_types.h
data/Mitsuba/: README  render_scene.py
data/Mitsuba/ModelSpecies/: Profile.csv  Species.json  bb.txt
data/Mitsuba/ModelSpecies/AbiesAlba/: AbiesAlba_1_5m_1.serialized  AbiesAlba_1_5m_TheGroveApicalTwigs.serialized  AbiesAlba_1_5m_TheGroveDeadTwigs.serialized  AbiesAlba_1_5m_TheGroveLateralTwigs.serialized  AbiesAlba_1_5m_TheGroveUpwardTwigs.serialized  AbiesAlba_25m.json  AbiesAlba_25m_TheGroveApicalTwigs.serialized  AbiesAlba_25m_TheGroveDeadTwigs.serialized  AbiesAlba_50m_TheGroveDeadTwigs.serialized  AbiesAlba_50m_TheGroveLateralTwigs.serialized  AbiesAlba_50m_TheGroveUpwardTwigs.serialized  AbiesAlba_6m_1.serialized  AbiesAlba_6m_TheGroveLateralTwigs.serialized
data/Mitsuba/ModelSpecies/AcerPseudoplatanus/: AcerPseudoplatanus_1_8m_LeafMat2.serialized  AcerPseudoplatanus_1_8m_TheGroveBranches.serialized  AcerPseudoplatanus_1_8m_TheGroveUpwardTwigs.serialized  AcerPseudoplatanus_30m.json  AcerPseudoplatanus_30m_LeafMat1.serialized  AcerPseudoplatanus_30m_TheGroveLateralTwigs.serialized  AcerPseudoplatanus_7_5m.json  AcerPseudoplatanus_7_5m_LeafMat1.serialized  AcerPseudoplatanus_7_5m_TheGroveApicalTwigs.serialized  AcerPseudoplatanus_7_5m_TheGroveBranches.serialized  AcerPseudoplatanus_7_5m_TheGroveDeadTwigs.serialized  AcerPseudoplatanus_7_5m_TheGroveLateralTwigs.serialized  AcerPseudoplatanus_7_5m_TheGroveUpwardTwigs.serialized
data/Mitsuba/ModelSpecies/BetulaPendula/: BetulaPendula_1_5m.json  BetulaPendula_25m_LeafFront.serialized  BetulaPendula_25m_LeafSide.serialized  BetulaPendula_6m_LeafSide.serialized  BetulaPendula_6m_TheGroveBranches.serialized
data/Mitsuba/ModelSpecies/FagusSylvatica/: FagusSylvatica_10m.json  FagusSylvatica_10m_LeafFront.serialized  FagusSylvatica_10m_TheGroveBranches.serialized  FagusSylvatica_2_5m_LeafFront.serialized  FagusSylvatica_40m.json  FagusSylvatica_40m_LeafSide.serialized
data/Mitsuba/ModelSpecies/LarixDecidua/: LarixDecidua_10m.json  LarixDecidua_10m_1.serialized  LarixDecidua_2_5m.json  LarixDecidua_2_5m_1.serialized  LarixDecidua_2_5m_TheGroveBranches.serialized  LarixDecidua_40m.json
data/Mitsuba/ModelSpecies/PiceaAbies/: PiceaAbies_0_8m_1.serialized  PiceaAbies_12_5m.json  PiceaAbies_12_5m_1.serialized  PiceaAbies_12_5m_TheGroveBranches.serialized  PiceaAbies_3_1m_1.serialized  PiceaAbies_50m.json
data/Mitsuba/ModelSpecies/PinusCembra/: PinusCembra_1_3m.json  PinusCembra_20m_TheGroveBranches.serialized  PinusCembra_5m.json  PinusCembra_5m_1.serialized
data/Mitsuba/ModelSpecies/PinusMugo/: PinusMugo_3m.json  PinusMugo_3m_TheGroveBranches.serialized
data/Mitsuba/ModelSpecies/PinusSylvestris/: PinusSylvestris10.json  PinusSylvestris10_1.serialized  PinusSylvestris10_TheGroveBranches.serialized  PinusSylvestris20.json  PinusSylvestris30.json  PinusSylvestris_2_1m.json  PinusSylvestris_8_6m.json  PinusSylvestris_8_6m_TheGroveBranches.serialized
data/Mitsuba/ModelSpecies/QuercusPetrae/: QuercusPetrae_1_6m_LeafFront.serialized  QuercusPetrae_1_6m_TheGroveBranches.serialized  QuercusPetrae_30m.json  QuercusPetrae_30m_LeafFront.serialized  QuercusPetrae_30m_LeafTop.serialized  QuercusPetrae_30m_TheGroveBranches.serialized  QuercusPetrae_7_3m.json  QuercusPetrae_7_3m_TheGroveBranches.serialized
data/Mitsuba/ModelSpecies/SorbusAucuparia/: SorbusAucuparia_15m.json  (+3 more)
data/Mitsuba/Terrain/: README
data/test2/: ecoviz_idx.asc  ecoviz_map.csv  view2.vew
data/test2/reference_data/: european.db  profiles.csv
data_importer/: cohorts.cpp  cohorts.h  data_importer.cpp  data_importer.h
ecoviz/: CMakeLists.txt  README-Windows.txt  buildecoviz-debug.sh  buildecoviz.sh  buildecovizapple.sh  ecoviz.sln  ecoviz.vcxproj  ecoviz.vcxproj.filters
ecoviz/common/: CMakeLists.txt  debug_string.h  debug_unordered_map.h  debug_vector.h  initialize.cpp  initialize.h  mathutils.h  obj.h  progress.h  region.h  serialize.h  source2cpp.cpp  source2cpp.h  stats.h  str.h  timer2.cpp  timer2.h
ecoviz/script/: copydll.bat
ecoviz/tools/: CMakeLists.txt  Makefile  ecosimtobin  ecosimtobin.cpp
ecoviz/unittests/: test_sampler.cpp
ecoviz/viz/: CMakeLists.txt  analyse_cohortmap_main.cpp  analyse_cohortmap_main.cpp.autosave  chartwindow.cpp  chartwindow.h  cohortmaps.cpp  cohortmaps.h  cohortsampler.cpp  cohortsampler.h  descriptor.h  dice_roller.cpp  dice_roller.h  eco.cpp  eco.h  export_dialog.cpp  export_dialog.h  glheaders.h  gloverview.cpp  gloverview.h  gltransect.cpp  gltransect.h  glwidget.cpp  glwidget.h  hash_table.h  main.cpp  main.cpp.autosave  main_sunsim.cpp  mitsuba_model.h  moc_chartwindow.cpp  moc_export_dialog.cpp  moc_gltransect.cpp  moc_glwidget.cpp  moc_progressbar_window.cpp  moc_scrollwindow.cpp  moc_timewindow.cpp  moc_window.cpp  pft.cpp  pft.h  progressbar_window.cpp  progressbar_window.h  (+26 more)
ecoviz/viz/UI/: resources.qrc
ecoviz/viz/shaders/: basic.vert  canopy.frag  flatTerr.frag  flatTerr.vert  genNormal.frag  phong-instanced.frag  phong-instanced.vert  phong.frag  phongRS.frag  phongRS.vert  phongRSmanip.frag  phongRSmanip.vert  rad_scaling_pass1.frag  rad_scaling_pass2.frag  rad_scaling_pass2b.frag  rad_scaling_pass2b.vert  simple.frag  sun.vert
resources/databases/: european.db
resources/mitsuba/: requirements.txt
resources/mitsuba/EnvMaps/: Lights.json
resources/mitsuba/ModelSpecies/: Profile.csv  README  Species.json  profiles.csv
resources/mitsubaexportprofiles/: exampleProfile.csv
resources/shaders/: basic.frag  canopy.vert  flatTerr.frag  genNormal.vert  phong-instanced.frag  phong.vert  rad_scaling_pass1.frag  rad_scaling_pass1.vert  simple.vert  sun.frag
(+446 files in other folders)
